# tensorflow

tensorflow/: workspace.bzl
tensorflow/contrib/lite/: CMakeLists.txt  allocation.cc  allocation.h  context.h  download_dependencies.sh  interpreter.h  model.cc  nnapi_delegate.cc  tflite_osal.cc  tflite_osal.h
tensorflow/contrib/lite/kernels/: activations.cc  basic_rnn.cc  bidirectional_sequence_lstm.cc  bidirectional_sequence_rnn.cc  concatenation.cc  conv.cc  depthwise_conv.cc  embedding_lookup.cc  fully_connected.cc  hashtable_lookup.cc  lsh_projection.cc  lstm.cc  pooling.cc  svdf.cc  unidirectional_sequence_lstm.cc  unidirectional_sequence_rnn.cc
tensorflow/contrib/lite/kernels/internal/: common.h  spectrogram.cc
tensorflow/contrib/lite/kernels/internal/optimized/: multithreaded_conv.h  neon_tensor_utils.cc
tensorflow/contrib/lite/nnapi/: NeuralNetworksShim.h
tensorflow/lite/delegates/gpu/: delegate.cc  delegate.h
tensorflow/lite/delegates/gpu/cl/: api.cc  api.h  compiled_program_cache_generated.h  environment.cc  environment.h  gpu_api_delegate.cc  gpu_api_delegate.h  inference_context.cc  inference_context.h  serialization.fbs
tensorflow/lite/delegates/gpu/cl/kernels/: gpu_operation.h
tensorflow/lite/delegates/gpu/common/task/: gpu_operation.h
tensorflow/lite/experimental/acceleration/compatibility/: devicedb.cc
tensorflow/lite/profiling/: atrace_profiler.cc  signpost_profiler.mm
tensorflow/lite/tools/make/: download_dependencies.sh
